[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/bw6761",
	"frame/evm/precompile/bls12377",
	"frame/evm/precompile/bls12381",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"frame/evm/precompile/storage-cleaner",
	"frame/evm-chain-id",
	"frame/hotfix-sufficients",
	"client/api",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/storage",
	"client/mapping-sync",
	"primitives/account",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"template/node",
	"template/runtime",
	"precompiles",
	"precompiles/macro",
	"precompiles/tests-external",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[workspace.dependencies]
async-trait = "0.1"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
clap = { version = "4.5", features = ["derive", "deprecated"] }
derive_more = "0.99"
environmental = { version = "1.1.4", default-features = false }
ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false }
futures = "0.3.30"
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
impl-serde = { version = "0.4.0", default-features = false }
impl-trait-for-tuples = "0.2.1"
jsonrpsee = "0.22.5"
kvdb-rocksdb = "0.19.0"
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.21", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
parity-db = "0.4.13"
parking_lot = "0.12.2"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
similar-asserts = "1.5.0"
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
thiserror = "1.0"
tokio = "1.37.0"

# Substrate Client
sc-basic-authorship = { version = "0.39.0" }
sc-block-builder = { version = "0.38.0" }
sc-chain-spec = { version = "32.0.0" }
sc-cli = { version = "0.41.0", default-features = false }
sc-client-api = { version = "33.0.0" }
sc-client-db = { version = "0.40.0", default-features = false }
sc-consensus = { version = "0.38.0" }
sc-consensus-aura = { version = "0.39.0" }
sc-consensus-grandpa = { version = "0.24.0" }
sc-consensus-manual-seal = { version = "0.40.0" }
sc-executor = { version = "0.37.0" }
sc-keystore = { version = "30.0.0" }
sc-network = { version = "0.39.0" }
sc-network-common = { version = "0.38.0" }
sc-network-sync = { version = "0.38.0" }
sc-offchain = { version = "34.0.0" }
sc-rpc = { version = "34.0.0" }
sc-rpc-api = { version = "0.38.0" }
sc-service = { version = "0.40.0", default-features = false }
sc-telemetry = { version = "19.0.0" }
sc-transaction-pool = { version = "33.0.0" }
sc-transaction-pool-api = { version = "33.0.0" }
sc-utils = { version = "17.0.0" }
# Substrate Primitive
sp-api = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-blockchain = { version = "33.0.0" }
sp-consensus = { version = "0.37.0" }
sp-consensus-aura = { version = "0.37.0", default-features = false }
sp-consensus-grandpa = { version = "18.0.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-database = { version = "10.0.0" }
sp-externalities = { version = "0.28.0", default-features = false }
sp-genesis-builder = { version = "0.12.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }
sp-keyring = { version = "36.0.0" }
sp-offchain = { version = "31.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false }
sp-runtime-interface = { version = "27.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-state-machine = { version = "0.40.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "31.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-version = { version = "34.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
# Substrate FRAME
frame-benchmarking = { version = "33.0.0", default-features = false }
frame-executive = { version = "33.0.0", default-features = false }
frame-support = { version = "33.0.0", default-features = false }
frame-system = { version = "33.0.0", default-features = false }
frame-system-benchmarking = { version = "33.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "31.0.0", default-features = false }
pallet-aura = { version = "32.0.0", default-features = false }
pallet-balances = { version = "34.0.0", default-features = false }
pallet-grandpa = { version = "33.0.0", default-features = false }
pallet-sudo = { version = "33.0.0", default-features = false }
pallet-timestamp = { version = "32.0.0", default-features = false }
pallet-transaction-payment = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "35.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0", default-features = false }
pallet-utility = { version = "33.0.0", default-features = false }
# Substrate Utility
frame-benchmarking-cli = { version = "37.0.0" }
prometheus-endpoint = { version = "0.17.0", package = "substrate-prometheus-endpoint" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "33.0.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
substrate-wasm-builder = { version = "22.0.1" }

# XCM
xcm = { version = "12.0.0", package = "staging-xcm", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Frontier Client
fc-api = { path = "client/api" }
fc-cli = { path = "client/cli", default-features = false }
fc-consensus = { path = "client/consensus" }
fc-db = { path = "client/db", default-features = false }
fc-mapping-sync = { path = "client/mapping-sync", default-features = false }
fc-rpc = { path = "client/rpc", default-features = false }
fc-rpc-core = { path = "client/rpc-core" }
fc-storage = { path = "client/storage" }
# Frontier Primitive
fp-account = { path = "primitives/account", default-features = false }
fp-consensus = { path = "primitives/consensus", default-features = false }
fp-dynamic-fee = { path = "primitives/dynamic-fee", default-features = false }
fp-ethereum = { path = "primitives/ethereum", default-features = false }
fp-evm = { path = "primitives/evm", default-features = false }
fp-rpc = { path = "primitives/rpc", default-features = false }
fp-self-contained = { path = "primitives/self-contained", default-features = false }
fp-storage = { path = "primitives/storage", default-features = false }
# Frontier FRAME
pallet-base-fee = { path = "frame/base-fee", default-features = false }
pallet-dynamic-fee = { path = "frame/dynamic-fee", default-features = false }
pallet-ethereum = { path = "frame/ethereum", default-features = false }
pallet-evm = { path = "frame/evm", default-features = false }
pallet-evm-chain-id = { path = "frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { path = "frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { path = "frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { path = "frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { path = "frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { path = "frame/hotfix-sufficients", default-features = false }
# Frontier Utility
precompile-utils = { path = "precompiles", default-features = false }
# Frontier Template
frontier-template-runtime = { path = "template/runtime", default-features = false }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
